--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,7 +1,7 @@
-baseURL: https://example.com
+baseURL: https://williamgeary.com
 languageCode: en
 DefaultContentLanguage: en
-title: William Geary
+title: Billy Geary
 theme: anatole
 summarylength: 10
 enableEmoji: yes
