--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,6 +1,6 @@
 
-title = "William Geary"
-author = "William Geary"
+title = "Billy Geary"
+author = "Billy Geary"
 #copyright = "2020-2021"
 description = """
 Quantitative Ecology & Biodiversity Conservation
