--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,7 +6,7 @@ description = """
 Quantitative Ecology & Biodiversity Conservation
 The University of Melbourne
 """
-profilePicture = "images/240208_Headshots_BillyGeary_0001.jpeg"
+profilePicture = "images/240208_Headshots_BillyGeary_0001.jpg"
 keywords = ""
 favicon = "favicons/"
 # example ["css/custom.css"]
